<resources>
    <string name="app_name">HoraireEcole</string>

    <string-array name="options_admin">
        <item>Oui</item>
        <item>Non</item>
    </string-array>

    <string-array name="options_effectif">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="admin">Admin</string>
    <string name="user">Employé</string>

    <!-- Boutons -->
    <string name="btnSave">Sauvegarder</string>
    <string name="btnConfirm">Confirmer</string>
    <string name="btnCancel">Annuler</string>
    <string name="btnReturn">Retour</string>

    <!-- MenuOptions -->
    <string name="action_edit_password">Changer de mot de passe</string>
    <string name="action_logout">Se Déconnecter</string>

    <!-- UserCenter -->
    <string name="user_horaireview">Voir son horaire</string>
    <string name="user_horairechoice">Choisir son horaire</string>
    <string name="user_horairechoice_edit">Modifier son horaire</string>
    <string name="user_admincontact">Contacter l\'administrateur</string>

    <!-- Title User -->
    <string name="title_user_center">Menu Principal</string>
    <string name="title_user_horaire">Liste des plage-horaire</string>
    <string name="title_user_horairedetail">Détails de la plage-horaire</string>
    <string name="title_user_horairechoice">Choix de plage-horaire</string>

    <!-- Title Admin -->
    <string name="title_admin_horairecreation">Liste des plages de la prochaine semaine</string>
    <string name="title_admin_horairecreation_detail">Détails de la plage-horaire</string>

    <!-- Title Popup -->
    <string name="title_edit_password">Changement de mot de passe</string>
    <string name="title_confirmation">Confirmation?</string>

    <!-- Erreur Message -->
    <string name="message_error">Erreur : Vous avez oublié de mettre une information.</string>

    <!-- Message Popup -->
    <string name="message_edit_password">Écrire un nouveau mot de passe pour remplacer l\'ancien</string>
    <string name="message_logout">Êtes-vous sure de vouloir vous déconnecter?</string>
    <string name="message_horairechoice_final">Êtes-vous sure de vouloir finaliser le choix d\'horaire de la semaine? Vous ne pourrez plus le modifier.</string>
    <string name="message_horairecreation_final">Êtes-vous sure de vouloir finaliser l\'horaire de la semaine?</string>
    <string name="message_horairecreation_add_cancel">Êtes-vous sure de vouloir annuler l\'ajout de cette plage? Votre progression sera perdu.</string>
    <string name="message_horairecreation_add_confirm">Êtes-vous sure de vouloir ajouter cette plage à \'horaire?</string>
    <string name="message_horairecreation_edit_cancel">Êtes-vous sure de vouloir annuler les modifications de cette plage? Votre progression sera perdu.</string>
    <string name="message_horairecreation_edit_confirm">Êtes-vous sure de vouloir modifier cette plage-horaire?</string>
    <string name="message_horaire_delete">Êtes-vous sure de vouloir supprimer cette plage à l\'horaire?</string>
    <string name="message_employe_delete">Êtes-vous sure de vouloir supprimer cet employé?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Login -->
    <string name="title_login">Page de connexion</string>
    <string name="btnlogin">Se Connecter</string>
    <string name="czkStay">Rester connecter</string>

    <!-- Title Admin Employé -->
    <string name="title_admin_employe">Liste des employés</string>
    <string name="title_admin_employe_add">Ajouter un employé</string>
    <string name="title_admin_employe_edit">Modification de l\'employé</string>

    <!-- Title Admin Horaire -->
    <string name="title_admin_horaire">Horaire de la semaine</string>
    <string name="title_admin_horaire_add">Création de plage-horaire</string>
    <string name="title_admin_horaire_edit">Modification de la plage-horaire</string>

    <!-- AdminCenter -->
    <string name="title_admin_center">Menu Principal administratif</string>
    <string name="admin_addhoraire">Créer horaire</string>
    <string name="admin_addemploye">Créer usager</string>
    <string name="admin_allhoraireview">Archives horaire</string>
    <string name="admin_horaireview">Modifier/Supprimer un horaire</string>
    <string name="admin_employeview">Modifier/Supprimer un employé</string>


    <!-- User Informations -->
    <string name="prenomEmp">PRÉNOM</string>
    <string name="nomEmp">NOM</string>
    <string name="emailEmp">COURRIEL</string>
    <string name="passwordEmp">MOT DE PASSE</string>
    <string name="seniorityEmp">Ancienneté</string>

    <!-- Horaire Informations -->
    <string name="descriptionHoraire">DESCRIPTION</string>
    <string name="nbEmployeHoraire">Nombre d\'effectif</string>
    <string name="dateHoraire">Date</string>
    <string name="timeBeginHoraire">Heure de début</string>
    <string name="timeEndHoraire">Heure de fin</string>
    <string name="dateChoixHoraire">Date choisie</string>
    <string name="timeChoixBeginHoraire">Heure de début choisie</string>
    <string name="timeChoixEndHoraire">Heure de fin choisie</string>

    <!-- Horaire Informations -->
    <string name="etDate">Date : </string>
    <string name="etTimeBegin">Heure de début : </string>
    <string name="etTimeEnd">Heure de fin : </string>
    <string name="etEmploye">Nombre d\'employé : </string>
    <string name="etPlace">Endroit du travail : </string>
    <string name="etDescription">Description du travail : </string>
</resources>